<resources>
    <string name="app_name">TVMazeChallenge</string>
    <string name="refresh">Refresh</string>
    <string name="search_series_by_name">Search by name</string>
    <string name="error_fetching_series">Error fetching shows. Try again later</string>
    <string name="type">Type</string>
    <string name="empty_cast">Empty cast</string>
    <string name="episodes">Episodes</string>
    <string name="there_are_no_episodes">This series has no episodes yet</string>
    <string name="null_season_error">A season value on Episodes array was null</string>
    <string name="season">Season</string>
    <string name="episode_name">Episode name</string>
    <string name="tool_long_text">Really long text to try several textviews on items</string>
    <string name="episodes_by_season">Episodes by season</string>
    <string name="season_formatted">Season %1$d</string>
    <string name="episode_formatted">%1$d - %2$s</string>
    <string name="days">Days:</string>
    <string name="genres">Genres:</string>
    <string name="season_episode_formatted">Season %1$d, Episode %2$d</string>
</resources>