<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.facundojaton.tvmazechallenge.ui.series.seriesdetails.SeriesDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_series_detail"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:scaleType="fitCenter"
                app:imageUrl="@{viewModel.seriesDetail.series.image.medium}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_series_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.seriesDetail.series.name}"
                android:textColor="#de000000"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_series_detail"
                tools:text="@tools:sample/full_names" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_series_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.seriesDetail.series.schedule.time}"
                android:textColor="@color/light_blue_grey_500"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_series_detail_title"
                tools:text="@tools:sample/full_names" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_series_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:htmlTextFormat="@{viewModel.seriesDetail.series.summary}"
                android:textColor="#de000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_series_time"
                tools:text="@tools:sample/lorem" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:id="@+id/cl_series_days"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_series_description" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_series_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days"
                    android:textColor="#de000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                   />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_series_days"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:listitem="@layout/layout_day_item"
                    app:daysArray="@{viewModel.seriesDetail.series.schedule.days}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_series_days"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:id="@+id/cl_series_genres"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_series_days" >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_series_genres_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textColor="#de000000"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_genres"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    tools:listitem="@layout/layout_genre_item"
                    app:genresArray="@{viewModel.seriesDetail.series.genres}"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_series_genres_label"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_series_seasons_and_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/episodes_by_season"
                android:textColor="@color/dark_cornflower_blue"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_series_genres" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_empty_episodes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_series_seasons_and_episodes">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_no_episodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/there_are_no_episodes"
                    android:textAlignment="center"
                    android:textColor="#de000000"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_rv_seasons"
                android:maxHeight="310dp"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_series_seasons_and_episodes">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_series_seasons"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:seasonsList="@{viewModel.seasonsList}"
                    tools:itemCount="16"
                    tools:listitem="@layout/layout_season_item" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>